ProjetCompil/Verif/Test/fail/write.cas
program
	A : array [1..10] of integer;
begin
	write(A) ;
end.